@@ -45,7 +45,8 @@ if(isset($com)){
 		$selsavedview='club';
 		}
 	elseif($com['type']=='transport'){
-		$students=(array)listin_community($com);
+		require_once('lib/fetch_transport.php');
+		$students=(array)list_bus_journey_students($com['name']);
 		$selsavedview='transport';
 		}
 	else{
